qrogue/dungeon_editor/dungeon_parser/QrogueDungeonParser.py
# Generated from D:/Documents/pycharm_workspace/Qrogue/qrogue/dungeon_editor\QrogueDungeon.g4 by ANTLR 4.9.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class QrogueDungeonParser ( Parser ):

    grammarFileName = "QrogueDungeon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'='", u"'qubits'", u"'['", u"']'", 
                     u"':'", u"'('", u"')'", u"'o'", u"'t'", u"'m'", u"'c'", 
                     u"'e'", u"'r'", u"'$'", u"'_'", u"'one way'", u"'entangled'", 
                     u"'custom'", u"'default'", u"'rewards'", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'visible'", u"'foggy'", u"'open'", u"'closed'", u"'locked'", 
                     u"'event'", u"'permanent'", u"'Spawn'", u"'Wild'", 
                     u"'Shop'", u"'Riddle'", u"'Boss'", u"'Gate'", u"'tutorial'", 
                     u"'trigger'", u"'key'", u"'coin'", u"'health'", u"'gate'", 
                     u"'+'", u"'-'", u"'Qrogue<'", u"'>Qrogue'", u"'Name'", 
                     u"'[Robot]'", u"'[Layout]'", u"'[Custom Rooms]'", u"'[Hallways]'", 
                     u"'[StateVector Pools]'", u"'[Reward Pools]'", u"'[Messages]'", 
                     u"'~'", u"'|'", u"','", u"'#'", u"'..'", u"'__'", u"<INVALID>", 
                     u"'ordered'", u"'random'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"DIGIT", u"INTEGER", u"FLOAT", u"IMAG_NUMBER", 
                      u"SIGN", u"CHARACTER_LOW", u"CHARACTER_UP", u"CHARACTER", 
                      u"TEXT", u"VISIBLE_LITERAL", u"FOGGY_LITERAL", u"OPEN_LITERAL", 
                      u"CLOSED_LITERAL", u"LOCKED_LITERAL", u"EVENT_LITERAL", 
                      u"PERMANENT_LITERAL", u"SPAWN_LITERAL", u"WILD_LITERAL", 
                      u"SHOP_LITERAL", u"RIDDLE_LITERAL", u"BOSS_LITERAL", 
                      u"GATE_ROOM_LITERAL", u"TUTORIAL_LITERAL", u"TRIGGER_LITERAL", 
                      u"KEY_LITERAL", u"COIN_LITERAL", u"HEALTH_LITERAL", 
                      u"GATE_LITERAL", u"PLUS_SIGN", u"MINUS_SIGN", u"HEADER", 
                      u"ENDER", u"NAME", u"ROBOT", u"LAYOUT", u"ROOMS", 
                      u"HALLWAYS", u"STV_POOLS", u"REWARD_POOLS", u"MESSAGES", 
                      u"HORIZONTAL_SEPARATOR", u"VERTICAL_SEPARATOR", u"LIST_SEPARATOR", 
                      u"WALL", u"EMPTY_HALLWAY", u"EMPTY_ROOM", u"DIRECTION", 
                      u"ORDERED_DRAW", u"RANDOM_DRAW", u"ROOM_ID", u"HALLWAY_ID", 
                      u"REFERENCE", u"WS", u"UNIVERSAL_SEPARATOR", u"COMMENT", 
                      u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_integer = 1
    RULE_complex_number = 2
    RULE_robot = 3
    RULE_layout = 4
    RULE_l_room_row = 5
    RULE_l_hallway_row = 6
    RULE_rooms = 7
    RULE_room = 8
    RULE_r_attributes = 9
    RULE_r_visibility = 10
    RULE_r_type = 11
    RULE_r_row = 12
    RULE_tile = 13
    RULE_tile_descriptor = 14
    RULE_trigger_descriptor = 15
    RULE_message_descriptor = 16
    RULE_enemy_descriptor = 17
    RULE_collectible_descriptor = 18
    RULE_energy_descriptor = 19
    RULE_riddle_descriptor = 20
    RULE_shop_descriptor = 21
    RULE_hallways = 22
    RULE_hallway = 23
    RULE_h_attributes = 24
    RULE_draw_strategy = 25
    RULE_stv_pools = 26
    RULE_default_stv_pool = 27
    RULE_stv_pool = 28
    RULE_stvs = 29
    RULE_stv = 30
    RULE_reward_pools = 31
    RULE_default_reward_pool = 32
    RULE_reward_pool = 33
    RULE_collectibles = 34
    RULE_collectible = 35
    RULE_messages = 36

    ruleNames =  [ u"start", u"integer", u"complex_number", u"robot", u"layout", 
                   u"l_room_row", u"l_hallway_row", u"rooms", u"room", u"r_attributes", 
                   u"r_visibility", u"r_type", u"r_row", u"tile", u"tile_descriptor", 
                   u"trigger_descriptor", u"message_descriptor", u"enemy_descriptor", 
                   u"collectible_descriptor", u"energy_descriptor", u"riddle_descriptor", 
                   u"shop_descriptor", u"hallways", u"hallway", u"h_attributes", 
                   u"draw_strategy", u"stv_pools", u"default_stv_pool", 
                   u"stv_pool", u"stvs", u"stv", u"reward_pools", u"default_reward_pool", 
                   u"reward_pool", u"collectibles", u"collectible", u"messages" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    DIGIT=21
    INTEGER=22
    FLOAT=23
    IMAG_NUMBER=24
    SIGN=25
    CHARACTER_LOW=26
    CHARACTER_UP=27
    CHARACTER=28
    TEXT=29
    VISIBLE_LITERAL=30
    FOGGY_LITERAL=31
    OPEN_LITERAL=32
    CLOSED_LITERAL=33
    LOCKED_LITERAL=34
    EVENT_LITERAL=35
    PERMANENT_LITERAL=36
    SPAWN_LITERAL=37
    WILD_LITERAL=38
    SHOP_LITERAL=39
    RIDDLE_LITERAL=40
    BOSS_LITERAL=41
    GATE_ROOM_LITERAL=42
    TUTORIAL_LITERAL=43
    TRIGGER_LITERAL=44
    KEY_LITERAL=45
    COIN_LITERAL=46
    HEALTH_LITERAL=47
    GATE_LITERAL=48
    PLUS_SIGN=49
    MINUS_SIGN=50
    HEADER=51
    ENDER=52
    NAME=53
    ROBOT=54
    LAYOUT=55
    ROOMS=56
    HALLWAYS=57
    STV_POOLS=58
    REWARD_POOLS=59
    MESSAGES=60
    HORIZONTAL_SEPARATOR=61
    VERTICAL_SEPARATOR=62
    LIST_SEPARATOR=63
    WALL=64
    EMPTY_HALLWAY=65
    EMPTY_ROOM=66
    DIRECTION=67
    ORDERED_DRAW=68
    RANDOM_DRAW=69
    ROOM_ID=70
    HALLWAY_ID=71
    REFERENCE=72
    WS=73
    UNIVERSAL_SEPARATOR=74
    COMMENT=75
    LINE_COMMENT=76

    def __init__(self, input, output=sys.stdout):
        super(QrogueDungeonParser, self).__init__(input, output=output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def HEADER(self):
            return self.getToken(QrogueDungeonParser.HEADER, 0)

        def robot(self):
            return self.getTypedRuleContext(QrogueDungeonParser.RobotContext,0)


        def layout(self):
            return self.getTypedRuleContext(QrogueDungeonParser.LayoutContext,0)


        def rooms(self):
            return self.getTypedRuleContext(QrogueDungeonParser.RoomsContext,0)


        def hallways(self):
            return self.getTypedRuleContext(QrogueDungeonParser.HallwaysContext,0)


        def stv_pools(self):
            return self.getTypedRuleContext(QrogueDungeonParser.Stv_poolsContext,0)


        def reward_pools(self):
            return self.getTypedRuleContext(QrogueDungeonParser.Reward_poolsContext,0)


        def messages(self):
            return self.getTypedRuleContext(QrogueDungeonParser.MessagesContext,0)


        def ENDER(self):
            return self.getToken(QrogueDungeonParser.ENDER, 0)

        def NAME(self):
            return self.getToken(QrogueDungeonParser.NAME, 0)

        def TEXT(self):
            return self.getToken(QrogueDungeonParser.TEXT, 0)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_start

        def enterRule(self, listener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStart"):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = QrogueDungeonParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(QrogueDungeonParser.HEADER)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QrogueDungeonParser.NAME:
                self.state = 75
                self.match(QrogueDungeonParser.NAME)
                self.state = 76
                self.match(QrogueDungeonParser.T__0)
                self.state = 77
                self.match(QrogueDungeonParser.TEXT)


            self.state = 80
            self.robot()
            self.state = 81
            self.layout()
            self.state = 82
            self.rooms()
            self.state = 83
            self.hallways()
            self.state = 84
            self.stv_pools()
            self.state = 85
            self.reward_pools()
            self.state = 86
            self.messages()
            self.state = 87
            self.match(QrogueDungeonParser.ENDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.IntegerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self):
            return self.getToken(QrogueDungeonParser.DIGIT, 0)

        def HALLWAY_ID(self):
            return self.getToken(QrogueDungeonParser.HALLWAY_ID, 0)

        def INTEGER(self):
            return self.getToken(QrogueDungeonParser.INTEGER, 0)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_integer

        def enterRule(self, listener):
            if hasattr(listener, "enterInteger"):
                listener.enterInteger(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitInteger"):
                listener.exitInteger(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitInteger"):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = QrogueDungeonParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not(((((_la - 21)) & ~0x3f) == 0 and ((1 << (_la - 21)) & ((1 << (QrogueDungeonParser.DIGIT - 21)) | (1 << (QrogueDungeonParser.INTEGER - 21)) | (1 << (QrogueDungeonParser.HALLWAY_ID - 21)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_numberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.Complex_numberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IMAG_NUMBER(self):
            return self.getToken(QrogueDungeonParser.IMAG_NUMBER, 0)

        def SIGN(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.SIGN)
            else:
                return self.getToken(QrogueDungeonParser.SIGN, i)

        def integer(self):
            return self.getTypedRuleContext(QrogueDungeonParser.IntegerContext,0)


        def FLOAT(self):
            return self.getToken(QrogueDungeonParser.FLOAT, 0)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_complex_number

        def enterRule(self, listener):
            if hasattr(listener, "enterComplex_number"):
                listener.enterComplex_number(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComplex_number"):
                listener.exitComplex_number(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitComplex_number"):
                return visitor.visitComplex_number(self)
            else:
                return visitor.visitChildren(self)




    def complex_number(self):

        localctx = QrogueDungeonParser.Complex_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_complex_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QrogueDungeonParser.SIGN:
                self.state = 91
                self.match(QrogueDungeonParser.SIGN)


            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QrogueDungeonParser.IMAG_NUMBER]:
                self.state = 94
                self.match(QrogueDungeonParser.IMAG_NUMBER)
                pass
            elif token in [QrogueDungeonParser.DIGIT, QrogueDungeonParser.INTEGER, QrogueDungeonParser.FLOAT, QrogueDungeonParser.HALLWAY_ID]:
                self.state = 97
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [QrogueDungeonParser.DIGIT, QrogueDungeonParser.INTEGER, QrogueDungeonParser.HALLWAY_ID]:
                    self.state = 95
                    self.integer()
                    pass
                elif token in [QrogueDungeonParser.FLOAT]:
                    self.state = 96
                    self.match(QrogueDungeonParser.FLOAT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QrogueDungeonParser.SIGN:
                    self.state = 99
                    self.match(QrogueDungeonParser.SIGN)
                    self.state = 100
                    self.match(QrogueDungeonParser.IMAG_NUMBER)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RobotContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.RobotContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ROBOT(self):
            return self.getToken(QrogueDungeonParser.ROBOT, 0)

        def DIGIT(self):
            return self.getToken(QrogueDungeonParser.DIGIT, 0)

        def REFERENCE(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.REFERENCE)
            else:
                return self.getToken(QrogueDungeonParser.REFERENCE, i)

        def LIST_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.LIST_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.LIST_SEPARATOR, i)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_robot

        def enterRule(self, listener):
            if hasattr(listener, "enterRobot"):
                listener.enterRobot(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRobot"):
                listener.exitRobot(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRobot"):
                return visitor.visitRobot(self)
            else:
                return visitor.visitChildren(self)




    def robot(self):

        localctx = QrogueDungeonParser.RobotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_robot)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(QrogueDungeonParser.ROBOT)
            self.state = 106
            self.match(QrogueDungeonParser.DIGIT)
            self.state = 107
            self.match(QrogueDungeonParser.T__1)
            self.state = 108
            self.match(QrogueDungeonParser.T__2)
            self.state = 109
            self.match(QrogueDungeonParser.REFERENCE)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.LIST_SEPARATOR:
                self.state = 110
                self.match(QrogueDungeonParser.LIST_SEPARATOR)
                self.state = 111
                self.match(QrogueDungeonParser.REFERENCE)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(QrogueDungeonParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayoutContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.LayoutContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LAYOUT(self):
            return self.getToken(QrogueDungeonParser.LAYOUT, 0)

        def l_room_row(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.L_room_rowContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.L_room_rowContext,i)


        def HORIZONTAL_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.HORIZONTAL_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.HORIZONTAL_SEPARATOR, i)

        def l_hallway_row(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueDungeonParser.L_hallway_rowContext)
            else:
                return self.getTypedRuleContext(QrogueDungeonParser.L_hallway_rowContext,i)


        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_layout

        def enterRule(self, listener):
            if hasattr(listener, "enterLayout"):
                listener.enterLayout(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLayout"):
                listener.exitLayout(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLayout"):
                return visitor.visitLayout(self)
            else:
                return visitor.visitChildren(self)




    def layout(self):

        localctx = QrogueDungeonParser.LayoutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_layout)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(QrogueDungeonParser.LAYOUT)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.HORIZONTAL_SEPARATOR:
                self.state = 120
                self.match(QrogueDungeonParser.HORIZONTAL_SEPARATOR)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.l_room_row()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.VERTICAL_SEPARATOR:
                self.state = 127
                self.l_hallway_row()
                self.state = 128
                self.l_room_row()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.HORIZONTAL_SEPARATOR:
                self.state = 135
                self.match(QrogueDungeonParser.HORIZONTAL_SEPARATOR)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_room_rowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.L_room_rowContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VERTICAL_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.VERTICAL_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.VERTICAL_SEPARATOR, i)

        def ROOM_ID(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.ROOM_ID)
            else:
                return self.getToken(QrogueDungeonParser.ROOM_ID, i)

        def EMPTY_ROOM(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.EMPTY_ROOM)
            else:
                return self.getToken(QrogueDungeonParser.EMPTY_ROOM, i)

        def HALLWAY_ID(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.HALLWAY_ID)
            else:
                return self.getToken(QrogueDungeonParser.HALLWAY_ID, i)

        def EMPTY_HALLWAY(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.EMPTY_HALLWAY)
            else:
                return self.getToken(QrogueDungeonParser.EMPTY_HALLWAY, i)

        def getRuleIndex(self):
            return QrogueDungeonParser.RULE_l_room_row

        def enterRule(self, listener):
            if hasattr(listener, "enterL_room_row"):
                listener.enterL_room_row(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitL_room_row"):
                listener.exitL_room_row(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitL_room_row"):
                return visitor.visitL_room_row(self)
            else:
                return visitor.visitChildren(self)




    def l_room_row(self):

        localctx = QrogueDungeonParser.L_room_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_l_room_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(QrogueDungeonParser.VERTICAL_SEPARATOR)
            self.state = 142
            _la = self._input.LA(1)
            if not(_la==QrogueDungeonParser.EMPTY_ROOM or _la==QrogueDungeonParser.ROOM_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueDungeonParser.EMPTY_HALLWAY or _la==QrogueDungeonParser.HALLWAY_ID:
                self.state = 143
                _la = self._input.LA(1)
                if not(_la==QrogueDungeonParser.EMPTY_HALLWAY or _la==QrogueDungeonParser.HALLWAY_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 144
                _la = self._input.LA(1)
                if not(_la==QrogueDungeonParser.EMPTY_ROOM or _la==QrogueDungeonParser.ROOM_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(QrogueDungeonParser.VERTICAL_SEPARATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_hallway_rowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueDungeonParser.L_hallway_rowContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VERTICAL_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueDungeonParser.VERTICAL_SEPARATOR)
            else:
                return self.getToken(QrogueDungeonParser.VERTICAL_SEPARATOR, i)
